--- a/style.css
+++ b/style.css
@@ -27,24 +27,20 @@ header img {
 }
 
 .main_text h1 {
-    font-size: 1.5rem;
+    font-size: 1.65rem;
     color: var(--color-neutral-gray);
     font-weight: 300;
 }
 
 .main_text h1 span {
     color: var(--color-neutral-dark-blue);
-    font-weight: 600;
+    font-weight: 700;
 }
 
 .main_text p {
     font-size: 14px;
     margin-bottom: 7.5%;
 }
-
-
-
-
 
 .main_form form {
     margin: 0 10%;
@@ -77,4 +73,37 @@ header img {
     color: white;
     font-weight: 600;
     box-shadow: 0px 5px 10px 0px rgba(79, 125, 243, 0.3);
+}
+
+.main-image {
+    margin-top: 15%;
+}
+
+.main-image img {
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+footer {
+    margin-top: 30%;
+    text-align: center;
+}
+
+footer img {
+    border: 1px solid #c2d3ff;
+    padding: 7px;
+    border-radius: 50%;
+}
+
+footer a:nth-child(2) {
+    margin-right: 2%;
+    margin-left: 2%;
+}
+
+footer p {
+    color: var(--color-neutral-gray);
+    font-size: 10px;
+    margin-top: 7.5%;
+    margin-bottom: 7.5%;
 }
