--- a/style.css
+++ b/style.css
@@ -107,3 +107,77 @@ footer p {
     margin-top: 7.5%;
     margin-bottom: 7.5%;
 }
+
+
+
+
+
+@media only screen and (min-width: 850px) {
+    header {
+        margin-top: 5%;
+    }
+
+    header img {
+        width: 4.5rem;
+    }
+    
+    .main {
+        margin-top: 2.5%;
+    }
+
+    .main_text h1 {
+        font-size: 2.65rem;
+        margin-bottom: 0;
+    }
+
+    .main_text p {
+        font-size: 16px;
+        margin-bottom: 3.5%;
+    }
+
+    .main_form form {
+        display: flex;
+        margin: 0 25%;
+    }
+
+    #sub-mail {
+        width: 350%;
+        padding: 4.5% 5%;
+        border-radius: 50px;
+        margin-bottom: 0;
+        height: 1px;
+        margin-right: 3%;
+    }
+
+    #sub-btn {
+        height: 1px;
+        padding: 4.5% 10%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50px;
+    }
+
+    .main-image {
+        margin-top: 7.5%;
+    }
+
+    .main-image img {
+        margin: 0% 25%;
+        width: 50%;
+    }
+
+    footer {
+        margin-top: 7.5%;
+    }
+
+    footer a:nth-child(2) {
+        margin-right: 1%;
+        margin-left: 1%;
+    }
+    
+    footer p {
+        margin-top: 1.5%;
+        margin-bottom: 2.5%;
+    }
+}
